// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bookings Api all() parse the returned data correctly when not paginated 1`] = `
[
  {
    "beneficiaries": [
      {
        "company": {
          "country": {
            "code": "FR",
            "id": 1,
            "name": "France",
          },
          "country_id": 1,
          "full_address": "1, company st.
1234 Megacity",
          "id": 1,
          "legal_name": "Testing, Inc",
          "locality": "Megacity",
          "note": "Just for tests",
          "phone": "+4123456789",
          "postal_code": "1234",
          "street": "1, company st.",
        },
        "company_id": 1,
        "country": {
          "code": "FR",
          "id": 1,
          "name": "France",
        },
        "country_id": 1,
        "email": "tester@robertmanager.net",
        "first_name": "Jean",
        "full_address": "1, somewhere av.
1234 Megacity",
        "full_name": "Jean Fountain",
        "id": 1,
        "last_name": "Fountain",
        "locality": "Megacity",
        "note": null,
        "phone": null,
        "postal_code": "1234",
        "reference": "0001",
        "street": "1, somewhere av.",
        "user_id": 1,
      },
    ],
    "categories": [
      1,
      2,
    ],
    "color": null,
    "created_at": /* DateTime Instance => */ "2018-12-01 12:50:45",
    "entity": "event",
    "has_not_returned_materials": false,
    "id": 1,
    "is_archived": false,
    "is_confirmed": false,
    "is_departure_inventory_done": true,
    "is_return_inventory_done": true,
    "location": "Gap",
    "mobilization_period": /* Period Instance => */ {
      "end": "2018-12-19 00:00:00",
      "isFullDays": false,
      "start": "2018-12-16 15:45:00",
    },
    "operation_period": /* Period Instance => */ {
      "end": "2018-12-18 18:00:00",
      "isFullDays": false,
      "start": "2018-12-17 10:00:00",
    },
    "parks": [
      1,
    ],
    "technicians": [
      {
        "event_id": 1,
        "id": 1,
        "period": /* Period Instance => */ {
          "end": "2018-12-18 22:00:00",
          "isFullDays": false,
          "start": "2018-12-17 09:00:00",
        },
        "position": "Régisseur",
        "technician": {
          "country": null,
          "country_id": null,
          "email": "tester2@robertmanager.net",
          "first_name": "Roger",
          "full_address": null,
          "full_name": "Roger Rabbit",
          "id": 1,
          "last_name": "Rabbit",
          "locality": null,
          "nickname": "Riri",
          "note": null,
          "phone": null,
          "postal_code": null,
          "street": null,
          "user_id": 2,
        },
        "technician_id": 1,
      },
      {
        "event_id": 1,
        "id": 2,
        "period": /* Period Instance => */ {
          "end": "2018-12-18 18:00:00",
          "isFullDays": false,
          "start": "2018-12-18 14:00:00",
        },
        "position": "Technicien plateau",
        "technician": {
          "country": {
            "code": "CH",
            "id": 2,
            "name": "Suisse",
          },
          "country_id": 2,
          "email": "client@technicien.com",
          "first_name": "Jean",
          "full_address": null,
          "full_name": "Jean Technicien",
          "id": 2,
          "last_name": "Technicien",
          "locality": null,
          "nickname": null,
          "note": null,
          "phone": "+33645698520",
          "postal_code": null,
          "street": null,
          "user_id": null,
        },
        "technician_id": 2,
      },
    ],
    "title": "Premier événement",
  },
  {
    "beneficiaries": [
      {
        "company": null,
        "company_id": null,
        "country": null,
        "country_id": null,
        "email": "client@beneficiaires.com",
        "first_name": "Client",
        "full_address": "156 bis, avenue des tests poussés
88080 Wazzaville",
        "full_name": "Client Benef",
        "id": 3,
        "last_name": "Benef",
        "locality": "Wazzaville",
        "note": null,
        "phone": "+33123456789",
        "postal_code": "88080",
        "reference": "0003",
        "street": "156 bis, avenue des tests poussés",
        "user_id": null,
      },
    ],
    "categories": [
      1,
    ],
    "color": "#ffba49",
    "created_at": /* DateTime Instance => */ "2018-12-16 12:50:45",
    "entity": "event",
    "has_not_returned_materials": true,
    "id": 2,
    "is_archived": false,
    "is_confirmed": false,
    "is_departure_inventory_done": false,
    "is_return_inventory_done": true,
    "location": "Lyon",
    "mobilization_period": /* Period Instance => */ {
      "end": "2018-12-20 00:00:00",
      "isFullDays": false,
      "start": "2018-12-18 00:00:00",
    },
    "operation_period": /* Period Instance => */ {
      "end": "2018-12-19",
      "isFullDays": true,
      "start": "2018-12-18",
    },
    "parks": [
      1,
    ],
    "technicians": [],
    "title": "Second événement",
  },
  {
    "beneficiaries": [],
    "categories": [
      1,
      2,
    ],
    "color": null,
    "created_at": /* DateTime Instance => */ "2018-12-14 12:20:00",
    "entity": "event",
    "has_not_returned_materials": null,
    "id": 3,
    "is_archived": true,
    "is_confirmed": false,
    "is_departure_inventory_done": true,
    "is_return_inventory_done": true,
    "location": "Brousse",
    "mobilization_period": /* Period Instance => */ {
      "end": "2018-12-16 15:45:00",
      "isFullDays": false,
      "start": "2018-12-15 08:30:00",
    },
    "operation_period": /* Period Instance => */ {
      "end": "2018-12-17 00:00:00",
      "isFullDays": false,
      "start": "2018-12-15 09:00:00",
    },
    "parks": [
      1,
    ],
    "technicians": [],
    "title": "Avant-premier événement",
  },
  {
    "beneficiaries": [],
    "categories": [
      1,
      3,
    ],
    "color": "#ef5b5b",
    "created_at": /* DateTime Instance => */ "2019-01-01 20:12:00",
    "entity": "event",
    "has_not_returned_materials": null,
    "id": 4,
    "is_archived": false,
    "is_confirmed": false,
    "is_departure_inventory_done": false,
    "is_return_inventory_done": false,
    "location": "Moon",
    "mobilization_period": /* Period Instance => */ {
      "end": "2019-04-11 00:00:00",
      "isFullDays": false,
      "start": "2019-03-01 00:00:00",
    },
    "operation_period": /* Period Instance => */ {
      "end": "2019-04-10",
      "isFullDays": true,
      "start": "2019-03-01",
    },
    "parks": [
      1,
      2,
    ],
    "technicians": [],
    "title": "Concert X",
  },
  {
    "beneficiaries": [
      {
        "company": {
          "country": {
            "code": "FR",
            "id": 1,
            "name": "France",
          },
          "country_id": 1,
          "full_address": "1, company st.
1234 Megacity",
          "id": 1,
          "legal_name": "Testing, Inc",
          "locality": "Megacity",
          "note": "Just for tests",
          "phone": "+4123456789",
          "postal_code": "1234",
          "street": "1, company st.",
        },
        "company_id": 1,
        "country": {
          "code": "FR",
          "id": 1,
          "name": "France",
        },
        "country_id": 1,
        "email": "tester@robertmanager.net",
        "first_name": "Jean",
        "full_address": "1, somewhere av.
1234 Megacity",
        "full_name": "Jean Fountain",
        "id": 1,
        "last_name": "Fountain",
        "locality": "Megacity",
        "note": null,
        "phone": null,
        "postal_code": "1234",
        "reference": "0001",
        "street": "1, somewhere av.",
        "user_id": 1,
      },
    ],
    "categories": [
      4,
    ],
    "color": null,
    "created_at": /* DateTime Instance => */ "2019-12-25 14:59:40",
    "entity": "event",
    "has_not_returned_materials": null,
    "id": 5,
    "is_archived": false,
    "is_confirmed": false,
    "is_departure_inventory_done": false,
    "is_return_inventory_done": false,
    "location": "Saint-Jean-la-Forêt",
    "mobilization_period": /* Period Instance => */ {
      "end": "2020-01-02 00:00:00",
      "isFullDays": false,
      "start": "2020-01-01 00:00:00",
    },
    "operation_period": /* Period Instance => */ {
      "end": "2020-01-01",
      "isFullDays": true,
      "start": "2020-01-01",
    },
    "parks": [
      1,
    ],
    "technicians": [],
    "title": "Kermesse de l'école des trois cailloux",
  },
  {
    "beneficiaries": [],
    "categories": [],
    "color": "#ef5b5b",
    "created_at": /* DateTime Instance => */ "2019-02-01 12:00:00",
    "entity": "event",
    "has_not_returned_materials": null,
    "id": 6,
    "is_archived": false,
    "is_confirmed": false,
    "is_departure_inventory_done": false,
    "is_return_inventory_done": false,
    "location": "La Clusaz",
    "mobilization_period": /* Period Instance => */ {
      "end": "2019-04-02 00:00:00",
      "isFullDays": false,
      "start": "2019-03-15 00:00:00",
    },
    "operation_period": /* Period Instance => */ {
      "end": "2019-04-01",
      "isFullDays": true,
      "start": "2019-03-15",
    },
    "parks": [],
    "technicians": [],
    "title": "Un événement sans inspiration",
  },
  {
    "beneficiaries": [],
    "categories": [
      1,
      2,
      3,
    ],
    "color": null,
    "created_at": /* DateTime Instance => */ "2022-05-29 18:00:00",
    "entity": "event",
    "has_not_returned_materials": null,
    "id": 7,
    "is_archived": false,
    "is_confirmed": true,
    "is_departure_inventory_done": false,
    "is_return_inventory_done": false,
    "location": "Machin-le-chateau",
    "mobilization_period": /* Period Instance => */ {
      "end": "2023-05-29 00:00:00",
      "isFullDays": false,
      "start": "2023-05-25 00:00:00",
    },
    "operation_period": /* Period Instance => */ {
      "end": "2023-05-28",
      "isFullDays": true,
      "start": "2023-05-25",
    },
    "parks": [
      1,
      2,
    ],
    "technicians": [
      {
        "event_id": 7,
        "id": 3,
        "period": /* Period Instance => */ {
          "end": "2023-05-29 00:00:00",
          "isFullDays": false,
          "start": "2023-05-25 00:00:00",
        },
        "position": "Ingénieur du son",
        "technician": {
          "country": {
            "code": "CH",
            "id": 2,
            "name": "Suisse",
          },
          "country_id": 2,
          "email": "client@technicien.com",
          "first_name": "Jean",
          "full_address": null,
          "full_name": "Jean Technicien",
          "id": 2,
          "last_name": "Technicien",
          "locality": null,
          "nickname": null,
          "note": null,
          "phone": "+33645698520",
          "postal_code": null,
          "street": null,
          "user_id": null,
        },
        "technician_id": 2,
      },
    ],
    "title": "Médiévales de Machin-le-chateau 2023",
  },
]
`;

exports[`Bookings Api all() parse the returned data correctly when paginated 1`] = `
{
  "data": [
    {
      "beneficiaries": [
        {
          "company": {
            "country": {
              "code": "FR",
              "id": 1,
              "name": "France",
            },
            "country_id": 1,
            "full_address": "1, company st.
1234 Megacity",
            "id": 1,
            "legal_name": "Testing, Inc",
            "locality": "Megacity",
            "note": "Just for tests",
            "phone": "+4123456789",
            "postal_code": "1234",
            "street": "1, company st.",
          },
          "company_id": 1,
          "country": {
            "code": "FR",
            "id": 1,
            "name": "France",
          },
          "country_id": 1,
          "email": "tester@robertmanager.net",
          "first_name": "Jean",
          "full_address": "1, somewhere av.
1234 Megacity",
          "full_name": "Jean Fountain",
          "id": 1,
          "last_name": "Fountain",
          "locality": "Megacity",
          "note": null,
          "phone": null,
          "postal_code": "1234",
          "reference": "0001",
          "street": "1, somewhere av.",
          "user_id": 1,
        },
      ],
      "categories": [
        1,
        2,
      ],
      "color": null,
      "created_at": /* DateTime Instance => */ "2018-12-01 12:50:45",
      "entity": "event",
      "has_not_returned_materials": false,
      "id": 1,
      "is_archived": false,
      "is_confirmed": false,
      "is_departure_inventory_done": true,
      "is_return_inventory_done": true,
      "location": "Gap",
      "mobilization_period": /* Period Instance => */ {
        "end": "2018-12-19 00:00:00",
        "isFullDays": false,
        "start": "2018-12-16 15:45:00",
      },
      "operation_period": /* Period Instance => */ {
        "end": "2018-12-18 18:00:00",
        "isFullDays": false,
        "start": "2018-12-17 10:00:00",
      },
      "parks": [
        1,
      ],
      "technicians": [
        {
          "event_id": 1,
          "id": 1,
          "period": /* Period Instance => */ {
            "end": "2018-12-18 22:00:00",
            "isFullDays": false,
            "start": "2018-12-17 09:00:00",
          },
          "position": "Régisseur",
          "technician": {
            "country": null,
            "country_id": null,
            "email": "tester2@robertmanager.net",
            "first_name": "Roger",
            "full_address": null,
            "full_name": "Roger Rabbit",
            "id": 1,
            "last_name": "Rabbit",
            "locality": null,
            "nickname": "Riri",
            "note": null,
            "phone": null,
            "postal_code": null,
            "street": null,
            "user_id": 2,
          },
          "technician_id": 1,
        },
        {
          "event_id": 1,
          "id": 2,
          "period": /* Period Instance => */ {
            "end": "2018-12-18 18:00:00",
            "isFullDays": false,
            "start": "2018-12-18 14:00:00",
          },
          "position": "Technicien plateau",
          "technician": {
            "country": {
              "code": "CH",
              "id": 2,
              "name": "Suisse",
            },
            "country_id": 2,
            "email": "client@technicien.com",
            "first_name": "Jean",
            "full_address": null,
            "full_name": "Jean Technicien",
            "id": 2,
            "last_name": "Technicien",
            "locality": null,
            "nickname": null,
            "note": null,
            "phone": "+33645698520",
            "postal_code": null,
            "street": null,
            "user_id": null,
          },
          "technician_id": 2,
        },
      ],
      "title": "Premier événement",
    },
    {
      "beneficiaries": [
        {
          "company": null,
          "company_id": null,
          "country": null,
          "country_id": null,
          "email": "client@beneficiaires.com",
          "first_name": "Client",
          "full_address": "156 bis, avenue des tests poussés
88080 Wazzaville",
          "full_name": "Client Benef",
          "id": 3,
          "last_name": "Benef",
          "locality": "Wazzaville",
          "note": null,
          "phone": "+33123456789",
          "postal_code": "88080",
          "reference": "0003",
          "street": "156 bis, avenue des tests poussés",
          "user_id": null,
        },
      ],
      "categories": [
        1,
      ],
      "color": "#ffba49",
      "created_at": /* DateTime Instance => */ "2018-12-16 12:50:45",
      "entity": "event",
      "has_not_returned_materials": true,
      "id": 2,
      "is_archived": false,
      "is_confirmed": false,
      "is_departure_inventory_done": false,
      "is_return_inventory_done": true,
      "location": "Lyon",
      "mobilization_period": /* Period Instance => */ {
        "end": "2018-12-20 00:00:00",
        "isFullDays": false,
        "start": "2018-12-18 00:00:00",
      },
      "operation_period": /* Period Instance => */ {
        "end": "2018-12-19",
        "isFullDays": true,
        "start": "2018-12-18",
      },
      "parks": [
        1,
      ],
      "technicians": [],
      "title": "Second événement",
    },
    {
      "beneficiaries": [],
      "categories": [
        1,
        2,
      ],
      "color": null,
      "created_at": /* DateTime Instance => */ "2018-12-14 12:20:00",
      "entity": "event",
      "has_not_returned_materials": null,
      "id": 3,
      "is_archived": true,
      "is_confirmed": false,
      "is_departure_inventory_done": true,
      "is_return_inventory_done": true,
      "location": "Brousse",
      "mobilization_period": /* Period Instance => */ {
        "end": "2018-12-16 15:45:00",
        "isFullDays": false,
        "start": "2018-12-15 08:30:00",
      },
      "operation_period": /* Period Instance => */ {
        "end": "2018-12-17 00:00:00",
        "isFullDays": false,
        "start": "2018-12-15 09:00:00",
      },
      "parks": [
        1,
      ],
      "technicians": [],
      "title": "Avant-premier événement",
    },
    {
      "beneficiaries": [],
      "categories": [
        1,
        3,
      ],
      "color": "#ef5b5b",
      "created_at": /* DateTime Instance => */ "2019-01-01 20:12:00",
      "entity": "event",
      "has_not_returned_materials": null,
      "id": 4,
      "is_archived": false,
      "is_confirmed": false,
      "is_departure_inventory_done": false,
      "is_return_inventory_done": false,
      "location": "Moon",
      "mobilization_period": /* Period Instance => */ {
        "end": "2019-04-11 00:00:00",
        "isFullDays": false,
        "start": "2019-03-01 00:00:00",
      },
      "operation_period": /* Period Instance => */ {
        "end": "2019-04-10",
        "isFullDays": true,
        "start": "2019-03-01",
      },
      "parks": [
        1,
        2,
      ],
      "technicians": [],
      "title": "Concert X",
    },
    {
      "beneficiaries": [
        {
          "company": {
            "country": {
              "code": "FR",
              "id": 1,
              "name": "France",
            },
            "country_id": 1,
            "full_address": "1, company st.
1234 Megacity",
            "id": 1,
            "legal_name": "Testing, Inc",
            "locality": "Megacity",
            "note": "Just for tests",
            "phone": "+4123456789",
            "postal_code": "1234",
            "street": "1, company st.",
          },
          "company_id": 1,
          "country": {
            "code": "FR",
            "id": 1,
            "name": "France",
          },
          "country_id": 1,
          "email": "tester@robertmanager.net",
          "first_name": "Jean",
          "full_address": "1, somewhere av.
1234 Megacity",
          "full_name": "Jean Fountain",
          "id": 1,
          "last_name": "Fountain",
          "locality": "Megacity",
          "note": null,
          "phone": null,
          "postal_code": "1234",
          "reference": "0001",
          "street": "1, somewhere av.",
          "user_id": 1,
        },
      ],
      "categories": [
        4,
      ],
      "color": null,
      "created_at": /* DateTime Instance => */ "2019-12-25 14:59:40",
      "entity": "event",
      "has_not_returned_materials": null,
      "id": 5,
      "is_archived": false,
      "is_confirmed": false,
      "is_departure_inventory_done": false,
      "is_return_inventory_done": false,
      "location": "Saint-Jean-la-Forêt",
      "mobilization_period": /* Period Instance => */ {
        "end": "2020-01-02 00:00:00",
        "isFullDays": false,
        "start": "2020-01-01 00:00:00",
      },
      "operation_period": /* Period Instance => */ {
        "end": "2020-01-01",
        "isFullDays": true,
        "start": "2020-01-01",
      },
      "parks": [
        1,
      ],
      "technicians": [],
      "title": "Kermesse de l'école des trois cailloux",
    },
    {
      "beneficiaries": [],
      "categories": [],
      "color": "#ef5b5b",
      "created_at": /* DateTime Instance => */ "2019-02-01 12:00:00",
      "entity": "event",
      "has_not_returned_materials": null,
      "id": 6,
      "is_archived": false,
      "is_confirmed": false,
      "is_departure_inventory_done": false,
      "is_return_inventory_done": false,
      "location": "La Clusaz",
      "mobilization_period": /* Period Instance => */ {
        "end": "2019-04-02 00:00:00",
        "isFullDays": false,
        "start": "2019-03-15 00:00:00",
      },
      "operation_period": /* Period Instance => */ {
        "end": "2019-04-01",
        "isFullDays": true,
        "start": "2019-03-15",
      },
      "parks": [],
      "technicians": [],
      "title": "Un événement sans inspiration",
    },
    {
      "beneficiaries": [],
      "categories": [
        1,
        2,
        3,
      ],
      "color": null,
      "created_at": /* DateTime Instance => */ "2022-05-29 18:00:00",
      "entity": "event",
      "has_not_returned_materials": null,
      "id": 7,
      "is_archived": false,
      "is_confirmed": true,
      "is_departure_inventory_done": false,
      "is_return_inventory_done": false,
      "location": "Machin-le-chateau",
      "mobilization_period": /* Period Instance => */ {
        "end": "2023-05-29 00:00:00",
        "isFullDays": false,
        "start": "2023-05-25 00:00:00",
      },
      "operation_period": /* Period Instance => */ {
        "end": "2023-05-28",
        "isFullDays": true,
        "start": "2023-05-25",
      },
      "parks": [
        1,
        2,
      ],
      "technicians": [
        {
          "event_id": 7,
          "id": 3,
          "period": /* Period Instance => */ {
            "end": "2023-05-29 00:00:00",
            "isFullDays": false,
            "start": "2023-05-25 00:00:00",
          },
          "position": "Ingénieur du son",
          "technician": {
            "country": {
              "code": "CH",
              "id": 2,
              "name": "Suisse",
            },
            "country_id": 2,
            "email": "client@technicien.com",
            "first_name": "Jean",
            "full_address": null,
            "full_name": "Jean Technicien",
            "id": 2,
            "last_name": "Technicien",
            "locality": null,
            "nickname": null,
            "note": null,
            "phone": "+33645698520",
            "postal_code": null,
            "street": null,
            "user_id": null,
          },
          "technician_id": 2,
        },
      ],
      "title": "Médiévales de Machin-le-chateau 2023",
    },
  ],
  "pagination": {
    "currentPage": 1,
    "perPage": 7,
    "total": {
      "items": 7,
      "pages": 1,
    },
  },
}
`;

exports[`Bookings Api oneSummary() parse the returned data correctly 1`] = `
{
  "beneficiaries": [
    {
      "company": {
        "country": {
          "code": "FR",
          "id": 1,
          "name": "France",
        },
        "country_id": 1,
        "full_address": "1, company st.
1234 Megacity",
        "id": 1,
        "legal_name": "Testing, Inc",
        "locality": "Megacity",
        "note": "Just for tests",
        "phone": "+4123456789",
        "postal_code": "1234",
        "street": "1, company st.",
      },
      "company_id": 1,
      "country": {
        "code": "FR",
        "id": 1,
        "name": "France",
      },
      "country_id": 1,
      "email": "tester@robertmanager.net",
      "first_name": "Jean",
      "full_address": "1, somewhere av.
1234 Megacity",
      "full_name": "Jean Fountain",
      "id": 1,
      "last_name": "Fountain",
      "locality": "Megacity",
      "note": null,
      "phone": null,
      "postal_code": "1234",
      "reference": "0001",
      "street": "1, somewhere av.",
      "user_id": 1,
    },
  ],
  "categories": [
    1,
    2,
  ],
  "color": null,
  "created_at": /* DateTime Instance => */ "2018-12-01 12:50:45",
  "description": null,
  "entity": "event",
  "has_missing_materials": null,
  "has_not_returned_materials": false,
  "id": 1,
  "is_archived": false,
  "is_billable": true,
  "is_confirmed": false,
  "is_departure_inventory_done": true,
  "is_return_inventory_done": true,
  "location": "Gap",
  "mobilization_period": /* Period Instance => */ {
    "end": "2018-12-19 00:00:00",
    "isFullDays": false,
    "start": "2018-12-16 15:45:00",
  },
  "operation_period": /* Period Instance => */ {
    "end": "2018-12-18 18:00:00",
    "isFullDays": false,
    "start": "2018-12-17 10:00:00",
  },
  "parks": [
    1,
  ],
  "reference": null,
  "technicians": [
    {
      "event_id": 1,
      "id": 1,
      "period": /* Period Instance => */ {
        "end": "2018-12-18 22:00:00",
        "isFullDays": false,
        "start": "2018-12-17 09:00:00",
      },
      "position": "Régisseur",
      "technician": {
        "country": null,
        "country_id": null,
        "email": "tester2@robertmanager.net",
        "first_name": "Roger",
        "full_address": null,
        "full_name": "Roger Rabbit",
        "id": 1,
        "last_name": "Rabbit",
        "locality": null,
        "nickname": "Riri",
        "note": null,
        "phone": null,
        "postal_code": null,
        "street": null,
        "user_id": 2,
      },
      "technician_id": 1,
    },
    {
      "event_id": 1,
      "id": 2,
      "period": /* Period Instance => */ {
        "end": "2018-12-18 18:00:00",
        "isFullDays": false,
        "start": "2018-12-18 14:00:00",
      },
      "position": "Technicien plateau",
      "technician": {
        "country": {
          "code": "CH",
          "id": 2,
          "name": "Suisse",
        },
        "country_id": 2,
        "email": "client@technicien.com",
        "first_name": "Jean",
        "full_address": null,
        "full_name": "Jean Technicien",
        "id": 2,
        "last_name": "Technicien",
        "locality": null,
        "nickname": null,
        "note": null,
        "phone": "+33645698520",
        "postal_code": null,
        "street": null,
        "user_id": null,
      },
      "technician_id": 2,
    },
  ],
  "title": "Premier événement",
}
`;

exports[`Bookings Api oneSummary() parse the returned data correctly 2`] = `
{
  "beneficiaries": [
    {
      "company": null,
      "company_id": null,
      "country": null,
      "country_id": null,
      "email": "client@beneficiaires.com",
      "first_name": "Client",
      "full_address": "156 bis, avenue des tests poussés
88080 Wazzaville",
      "full_name": "Client Benef",
      "id": 3,
      "last_name": "Benef",
      "locality": "Wazzaville",
      "note": null,
      "phone": "+33123456789",
      "postal_code": "88080",
      "reference": "0003",
      "street": "156 bis, avenue des tests poussés",
      "user_id": null,
    },
  ],
  "categories": [
    1,
  ],
  "color": "#ffba49",
  "created_at": /* DateTime Instance => */ "2018-12-16 12:50:45",
  "description": null,
  "entity": "event",
  "has_missing_materials": null,
  "has_not_returned_materials": true,
  "id": 2,
  "is_archived": false,
  "is_billable": true,
  "is_confirmed": false,
  "is_departure_inventory_done": false,
  "is_return_inventory_done": true,
  "location": "Lyon",
  "mobilization_period": /* Period Instance => */ {
    "end": "2018-12-20 00:00:00",
    "isFullDays": false,
    "start": "2018-12-18 00:00:00",
  },
  "operation_period": /* Period Instance => */ {
    "end": "2018-12-19",
    "isFullDays": true,
    "start": "2018-12-18",
  },
  "parks": [
    1,
  ],
  "reference": null,
  "technicians": [],
  "title": "Second événement",
}
`;

exports[`Bookings Api oneSummary() parse the returned data correctly 3`] = `
{
  "beneficiaries": [],
  "categories": [
    1,
    2,
  ],
  "color": null,
  "created_at": /* DateTime Instance => */ "2018-12-14 12:20:00",
  "description": null,
  "entity": "event",
  "has_missing_materials": null,
  "has_not_returned_materials": null,
  "id": 3,
  "is_archived": true,
  "is_billable": false,
  "is_confirmed": false,
  "is_departure_inventory_done": true,
  "is_return_inventory_done": true,
  "location": "Brousse",
  "mobilization_period": /* Period Instance => */ {
    "end": "2018-12-16 15:45:00",
    "isFullDays": false,
    "start": "2018-12-15 08:30:00",
  },
  "operation_period": /* Period Instance => */ {
    "end": "2018-12-17 00:00:00",
    "isFullDays": false,
    "start": "2018-12-15 09:00:00",
  },
  "parks": [
    1,
  ],
  "reference": null,
  "technicians": [],
  "title": "Avant-premier événement",
}
`;

exports[`Bookings Api oneSummary() parse the returned data correctly 4`] = `
{
  "beneficiaries": [],
  "categories": [
    1,
    3,
  ],
  "color": "#ef5b5b",
  "created_at": /* DateTime Instance => */ "2019-01-01 20:12:00",
  "description": null,
  "entity": "event",
  "has_missing_materials": true,
  "has_not_returned_materials": null,
  "id": 4,
  "is_archived": false,
  "is_billable": false,
  "is_confirmed": false,
  "is_departure_inventory_done": false,
  "is_return_inventory_done": false,
  "location": "Moon",
  "mobilization_period": /* Period Instance => */ {
    "end": "2019-04-11 00:00:00",
    "isFullDays": false,
    "start": "2019-03-01 00:00:00",
  },
  "operation_period": /* Period Instance => */ {
    "end": "2019-04-10",
    "isFullDays": true,
    "start": "2019-03-01",
  },
  "parks": [
    1,
    2,
  ],
  "reference": null,
  "technicians": [],
  "title": "Concert X",
}
`;

exports[`Bookings Api oneSummary() parse the returned data correctly 5`] = `
{
  "beneficiaries": [
    {
      "company": {
        "country": {
          "code": "FR",
          "id": 1,
          "name": "France",
        },
        "country_id": 1,
        "full_address": "1, company st.
1234 Megacity",
        "id": 1,
        "legal_name": "Testing, Inc",
        "locality": "Megacity",
        "note": "Just for tests",
        "phone": "+4123456789",
        "postal_code": "1234",
        "street": "1, company st.",
      },
      "company_id": 1,
      "country": {
        "code": "FR",
        "id": 1,
        "name": "France",
      },
      "country_id": 1,
      "email": "tester@robertmanager.net",
      "first_name": "Jean",
      "full_address": "1, somewhere av.
1234 Megacity",
      "full_name": "Jean Fountain",
      "id": 1,
      "last_name": "Fountain",
      "locality": "Megacity",
      "note": null,
      "phone": null,
      "postal_code": "1234",
      "reference": "0001",
      "street": "1, somewhere av.",
      "user_id": 1,
    },
  ],
  "categories": [
    4,
  ],
  "color": null,
  "created_at": /* DateTime Instance => */ "2019-12-25 14:59:40",
  "description": null,
  "entity": "event",
  "has_missing_materials": true,
  "has_not_returned_materials": null,
  "id": 5,
  "is_archived": false,
  "is_billable": false,
  "is_confirmed": false,
  "is_departure_inventory_done": false,
  "is_return_inventory_done": false,
  "location": "Saint-Jean-la-Forêt",
  "mobilization_period": /* Period Instance => */ {
    "end": "2020-01-02 00:00:00",
    "isFullDays": false,
    "start": "2020-01-01 00:00:00",
  },
  "operation_period": /* Period Instance => */ {
    "end": "2020-01-01",
    "isFullDays": true,
    "start": "2020-01-01",
  },
  "parks": [
    1,
  ],
  "reference": null,
  "technicians": [],
  "title": "Kermesse de l'école des trois cailloux",
}
`;

exports[`Bookings Api oneSummary() parse the returned data correctly 6`] = `
{
  "beneficiaries": [],
  "categories": [],
  "color": "#ef5b5b",
  "created_at": /* DateTime Instance => */ "2019-02-01 12:00:00",
  "description": null,
  "entity": "event",
  "has_missing_materials": false,
  "has_not_returned_materials": null,
  "id": 6,
  "is_archived": false,
  "is_billable": false,
  "is_confirmed": false,
  "is_departure_inventory_done": false,
  "is_return_inventory_done": false,
  "location": "La Clusaz",
  "mobilization_period": /* Period Instance => */ {
    "end": "2019-04-02 00:00:00",
    "isFullDays": false,
    "start": "2019-03-15 00:00:00",
  },
  "operation_period": /* Period Instance => */ {
    "end": "2019-04-01",
    "isFullDays": true,
    "start": "2019-03-15",
  },
  "parks": [],
  "reference": null,
  "technicians": [],
  "title": "Un événement sans inspiration",
}
`;

exports[`Bookings Api oneSummary() parse the returned data correctly 7`] = `
{
  "beneficiaries": [],
  "categories": [
    1,
    2,
    3,
  ],
  "color": null,
  "created_at": /* DateTime Instance => */ "2022-05-29 18:00:00",
  "description": null,
  "entity": "event",
  "has_missing_materials": false,
  "has_not_returned_materials": null,
  "id": 7,
  "is_archived": false,
  "is_billable": true,
  "is_confirmed": true,
  "is_departure_inventory_done": false,
  "is_return_inventory_done": false,
  "location": "Machin-le-chateau",
  "mobilization_period": /* Period Instance => */ {
    "end": "2023-05-29 00:00:00",
    "isFullDays": false,
    "start": "2023-05-25 00:00:00",
  },
  "operation_period": /* Period Instance => */ {
    "end": "2023-05-28",
    "isFullDays": true,
    "start": "2023-05-25",
  },
  "parks": [
    1,
    2,
  ],
  "reference": null,
  "technicians": [
    {
      "event_id": 7,
      "id": 3,
      "period": /* Period Instance => */ {
        "end": "2023-05-29 00:00:00",
        "isFullDays": false,
        "start": "2023-05-25 00:00:00",
      },
      "position": "Ingénieur du son",
      "technician": {
        "country": {
          "code": "CH",
          "id": 2,
          "name": "Suisse",
        },
        "country_id": 2,
        "email": "client@technicien.com",
        "first_name": "Jean",
        "full_address": null,
        "full_name": "Jean Technicien",
        "id": 2,
        "last_name": "Technicien",
        "locality": null,
        "nickname": null,
        "note": null,
        "phone": "+33645698520",
        "postal_code": null,
        "street": null,
        "user_id": null,
      },
      "technician_id": 2,
    },
  ],
  "title": "Médiévales de Machin-le-chateau 2023",
}
`;

exports[`Bookings Api updateMaterials() parse the returned data correctly 1`] = `
{
  "author": {
    "email": "tester@robertmanager.net",
    "first_name": "Jean",
    "full_name": "Jean Fountain",
    "group": "admin",
    "id": 1,
    "last_name": "Fountain",
    "phone": null,
    "pseudo": "test1",
  },
  "beneficiaries": [
    {
      "company": {
        "country": {
          "code": "FR",
          "id": 1,
          "name": "France",
        },
        "country_id": 1,
        "full_address": "1, company st.
1234 Megacity",
        "id": 1,
        "legal_name": "Testing, Inc",
        "locality": "Megacity",
        "note": "Just for tests",
        "phone": "+4123456789",
        "postal_code": "1234",
        "street": "1, company st.",
      },
      "company_id": 1,
      "country": {
        "code": "FR",
        "id": 1,
        "name": "France",
      },
      "country_id": 1,
      "email": "tester@robertmanager.net",
      "first_name": "Jean",
      "full_address": "1, somewhere av.
1234 Megacity",
      "full_name": "Jean Fountain",
      "id": 1,
      "last_name": "Fountain",
      "locality": "Megacity",
      "note": null,
      "phone": null,
      "postal_code": "1234",
      "reference": "0001",
      "street": "1, somewhere av.",
      "user_id": 1,
    },
  ],
  "color": null,
  "created_at": /* DateTime Instance => */ "2018-12-01 12:50:45",
  "currency": "EUR",
  "daily_total": /* Decimal Instance => */ "341.45",
  "degressive_rate": /* Decimal Instance => */ "1.75",
  "departure_inventory_author": {
    "email": "tester@robertmanager.net",
    "first_name": "Jean",
    "full_name": "Jean Fountain",
    "group": "admin",
    "id": 1,
    "last_name": "Fountain",
    "phone": null,
    "pseudo": "test1",
  },
  "departure_inventory_datetime": /* DateTime Instance => */ "2018-12-16 15:35:00",
  "description": null,
  "discount_rate": /* Decimal Instance => */ "0",
  "entity": "event",
  "estimates": [
    {
      "currency": "EUR",
      "date": /* DateTime Instance => */ "2021-01-30 14:00:00",
      "discount_rate": /* Decimal Instance => */ "5",
      "id": 1,
      "total_with_taxes": /* Decimal Instance => */ "660.34",
      "total_without_taxes": /* Decimal Instance => */ "550.28",
      "url": "http://loxya.test/estimates/1/pdf",
    },
  ],
  "has_missing_materials": null,
  "has_not_returned_materials": false,
  "id": 1,
  "invoices": [
    {
      "currency": "EUR",
      "date": /* DateTime Instance => */ "2020-01-30 14:00:00",
      "discount_rate": /* Decimal Instance => */ "4.4766",
      "id": 1,
      "number": "2020-00001",
      "total_with_taxes": /* Decimal Instance => */ "652.96",
      "total_without_taxes": /* Decimal Instance => */ "544.13",
      "url": "http://loxya.test/invoices/1/pdf",
    },
  ],
  "is_archived": false,
  "is_billable": true,
  "is_confirmed": false,
  "is_departure_inventory_done": true,
  "is_return_inventory_done": true,
  "is_return_inventory_started": true,
  "location": "Gap",
  "materials": [
    {
      "attributes": [
        {
          "id": 1,
          "is_totalisable": true,
          "name": "Poids",
          "type": "float",
          "unit": "kg",
          "value": 36.5,
        },
        {
          "id": 2,
          "max_length": null,
          "name": "Couleur",
          "type": "string",
          "value": "Grise",
        },
        {
          "id": 3,
          "is_totalisable": true,
          "name": "Puissance",
          "type": "integer",
          "unit": "W",
          "value": 850,
        },
      ],
      "category_id": 1,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
      "description": "Console numérique 64 entrées / 8 sorties + Master + Sub",
      "id": 1,
      "is_discountable": false,
      "is_hidden_on_bill": false,
      "is_reservable": true,
      "name": "Console Yamaha CL3",
      "note": null,
      "out_of_order_quantity": 1,
      "park_id": 1,
      "picture": "http://loxya.test/materials/1/picture",
      "pivot": {
        "departure_comment": null,
        "quantity": 1,
        "quantity_departed": 1,
        "quantity_returned": 1,
        "quantity_returned_broken": 0,
      },
      "reference": "CL3",
      "rental_price": /* Decimal Instance => */ "300",
      "replacement_price": /* Decimal Instance => */ "19400",
      "stock_quantity": 5,
      "sub_category_id": 1,
      "tags": [
        {
          "id": 1,
          "name": "Premium",
        },
      ],
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
    },
    {
      "attributes": [
        {
          "id": 1,
          "is_totalisable": true,
          "name": "Poids",
          "type": "float",
          "unit": "kg",
          "value": 2.2,
        },
        {
          "id": 3,
          "is_totalisable": true,
          "name": "Puissance",
          "type": "integer",
          "unit": "W",
          "value": 35,
        },
      ],
      "category_id": 1,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:01:00",
      "description": "Système de diffusion numérique",
      "id": 2,
      "is_discountable": true,
      "is_hidden_on_bill": false,
      "is_reservable": false,
      "name": "Processeur DBX PA2",
      "note": null,
      "out_of_order_quantity": 0,
      "park_id": 1,
      "picture": null,
      "pivot": {
        "departure_comment": "Le matériel n'est pas en très bon état.",
        "quantity": 1,
        "quantity_departed": 1,
        "quantity_returned": 1,
        "quantity_returned_broken": 0,
      },
      "reference": "DBXPA2",
      "rental_price": /* Decimal Instance => */ "25.5",
      "replacement_price": /* Decimal Instance => */ "349.9",
      "stock_quantity": 2,
      "sub_category_id": 2,
      "tags": [
        {
          "id": 1,
          "name": "Premium",
        },
      ],
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
    },
    {
      "attributes": [
        {
          "id": 1,
          "is_totalisable": true,
          "name": "Poids",
          "type": "float",
          "unit": "kg",
          "value": 3.15,
        },
        {
          "id": 3,
          "is_totalisable": true,
          "name": "Puissance",
          "type": "integer",
          "unit": "W",
          "value": 60,
        },
        {
          "id": 4,
          "name": "Conforme",
          "type": "boolean",
          "value": true,
        },
      ],
      "category_id": 2,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:03:00",
      "description": "Console DMX (jeu d'orgue) Showtec 6 canaux",
      "id": 4,
      "is_discountable": true,
      "is_hidden_on_bill": false,
      "is_reservable": true,
      "name": "Showtec SDS-6",
      "note": null,
      "out_of_order_quantity": 0,
      "park_id": 1,
      "picture": null,
      "pivot": {
        "departure_comment": null,
        "quantity": 1,
        "quantity_departed": 1,
        "quantity_returned": 1,
        "quantity_returned_broken": 1,
      },
      "reference": "SDS-6-01",
      "rental_price": /* Decimal Instance => */ "15.95",
      "replacement_price": /* Decimal Instance => */ "59",
      "stock_quantity": 2,
      "sub_category_id": 4,
      "tags": [],
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:03:00",
    },
  ],
  "mobilization_period": /* Period Instance => */ {
    "end": "2018-12-19 00:00:00",
    "isFullDays": false,
    "start": "2018-12-16 15:45:00",
  },
  "note": null,
  "operation_period": /* Period Instance => */ {
    "end": "2018-12-18 18:00:00",
    "isFullDays": false,
    "start": "2018-12-17 10:00:00",
  },
  "reference": null,
  "return_inventory_author": null,
  "return_inventory_datetime": null,
  "technicians": [
    {
      "event_id": 1,
      "id": 1,
      "period": /* Period Instance => */ {
        "end": "2018-12-18 22:00:00",
        "isFullDays": false,
        "start": "2018-12-17 09:00:00",
      },
      "position": "Régisseur",
      "technician": {
        "country": null,
        "country_id": null,
        "email": "tester2@robertmanager.net",
        "first_name": "Roger",
        "full_address": null,
        "full_name": "Roger Rabbit",
        "id": 1,
        "last_name": "Rabbit",
        "locality": null,
        "nickname": "Riri",
        "note": null,
        "phone": null,
        "postal_code": null,
        "street": null,
        "user_id": 2,
      },
      "technician_id": 1,
    },
    {
      "event_id": 1,
      "id": 2,
      "period": /* Period Instance => */ {
        "end": "2018-12-18 18:00:00",
        "isFullDays": false,
        "start": "2018-12-18 14:00:00",
      },
      "position": "Technicien plateau",
      "technician": {
        "country": {
          "code": "CH",
          "id": 2,
          "name": "Suisse",
        },
        "country_id": 2,
        "email": "client@technicien.com",
        "first_name": "Jean",
        "full_address": null,
        "full_name": "Jean Technicien",
        "id": 2,
        "last_name": "Technicien",
        "locality": null,
        "nickname": null,
        "note": null,
        "phone": "+33645698520",
        "postal_code": null,
        "street": null,
        "user_id": null,
      },
      "technician_id": 2,
    },
  ],
  "title": "Premier événement",
  "total_discount": /* Decimal Instance => */ "0",
  "total_discountable": /* Decimal Instance => */ "72.54",
  "total_replacement": /* Decimal Instance => */ "19808.9",
  "total_taxes": /* Decimal Instance => */ "119.51",
  "total_with_taxes": /* Decimal Instance => */ "717.05",
  "total_without_discount": /* Decimal Instance => */ "597.54",
  "total_without_taxes": /* Decimal Instance => */ "597.54",
  "updated_at": /* DateTime Instance => */ "2018-12-05 08:31:21",
  "vat_rate": /* Decimal Instance => */ "20",
}
`;

exports[`Bookings Api updateMaterials() parse the returned data correctly 2`] = `
{
  "author": {
    "email": "tester@robertmanager.net",
    "first_name": "Jean",
    "full_name": "Jean Fountain",
    "group": "admin",
    "id": 1,
    "last_name": "Fountain",
    "phone": null,
    "pseudo": "test1",
  },
  "beneficiaries": [
    {
      "company": null,
      "company_id": null,
      "country": null,
      "country_id": null,
      "email": "client@beneficiaires.com",
      "first_name": "Client",
      "full_address": "156 bis, avenue des tests poussés
88080 Wazzaville",
      "full_name": "Client Benef",
      "id": 3,
      "last_name": "Benef",
      "locality": "Wazzaville",
      "note": null,
      "phone": "+33123456789",
      "postal_code": "88080",
      "reference": "0003",
      "street": "156 bis, avenue des tests poussés",
      "user_id": null,
    },
  ],
  "color": "#ffba49",
  "created_at": /* DateTime Instance => */ "2018-12-16 12:50:45",
  "currency": "EUR",
  "daily_total": /* Decimal Instance => */ "951",
  "degressive_rate": /* Decimal Instance => */ "1.75",
  "departure_inventory_author": null,
  "departure_inventory_datetime": null,
  "description": null,
  "discount_rate": /* Decimal Instance => */ "0",
  "entity": "event",
  "estimates": [],
  "has_missing_materials": null,
  "has_not_returned_materials": true,
  "id": 2,
  "invoices": [],
  "is_archived": false,
  "is_billable": true,
  "is_confirmed": false,
  "is_departure_inventory_done": false,
  "is_return_inventory_done": true,
  "is_return_inventory_started": true,
  "location": "Lyon",
  "materials": [
    {
      "attributes": [
        {
          "id": 1,
          "is_totalisable": true,
          "name": "Poids",
          "type": "float",
          "unit": "kg",
          "value": 36.5,
        },
        {
          "id": 2,
          "max_length": null,
          "name": "Couleur",
          "type": "string",
          "value": "Grise",
        },
        {
          "id": 3,
          "is_totalisable": true,
          "name": "Puissance",
          "type": "integer",
          "unit": "W",
          "value": 850,
        },
      ],
      "category_id": 1,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
      "description": "Console numérique 64 entrées / 8 sorties + Master + Sub",
      "id": 1,
      "is_discountable": false,
      "is_hidden_on_bill": false,
      "is_reservable": true,
      "name": "Console Yamaha CL3",
      "note": null,
      "out_of_order_quantity": 1,
      "park_id": 1,
      "picture": "http://loxya.test/materials/1/picture",
      "pivot": {
        "departure_comment": null,
        "quantity": 3,
        "quantity_departed": 2,
        "quantity_returned": 2,
        "quantity_returned_broken": 0,
      },
      "reference": "CL3",
      "rental_price": /* Decimal Instance => */ "300",
      "replacement_price": /* Decimal Instance => */ "19400",
      "stock_quantity": 5,
      "sub_category_id": 1,
      "tags": [
        {
          "id": 1,
          "name": "Premium",
        },
      ],
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
    },
    {
      "attributes": [
        {
          "id": 1,
          "is_totalisable": true,
          "name": "Poids",
          "type": "float",
          "unit": "kg",
          "value": 2.2,
        },
        {
          "id": 3,
          "is_totalisable": true,
          "name": "Puissance",
          "type": "integer",
          "unit": "W",
          "value": 35,
        },
      ],
      "category_id": 1,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:01:00",
      "description": "Système de diffusion numérique",
      "id": 2,
      "is_discountable": true,
      "is_hidden_on_bill": false,
      "is_reservable": false,
      "name": "Processeur DBX PA2",
      "note": null,
      "out_of_order_quantity": 0,
      "park_id": 1,
      "picture": null,
      "pivot": {
        "departure_comment": "Validé avec le client.",
        "quantity": 2,
        "quantity_departed": 2,
        "quantity_returned": 2,
        "quantity_returned_broken": 0,
      },
      "reference": "DBXPA2",
      "rental_price": /* Decimal Instance => */ "25.5",
      "replacement_price": /* Decimal Instance => */ "349.9",
      "stock_quantity": 2,
      "sub_category_id": 2,
      "tags": [
        {
          "id": 1,
          "name": "Premium",
        },
      ],
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
    },
  ],
  "mobilization_period": /* Period Instance => */ {
    "end": "2018-12-20 00:00:00",
    "isFullDays": false,
    "start": "2018-12-18 00:00:00",
  },
  "note": "Il faudra envoyer le matériel sur Lyon avant l'avant-veille.",
  "operation_period": /* Period Instance => */ {
    "end": "2018-12-19",
    "isFullDays": true,
    "start": "2018-12-18",
  },
  "reference": null,
  "return_inventory_author": {
    "email": "tester2@robertmanager.net",
    "first_name": "Roger",
    "full_name": "Roger Rabbit",
    "group": "member",
    "id": 2,
    "last_name": "Rabbit",
    "phone": null,
    "pseudo": "test2",
  },
  "return_inventory_datetime": /* DateTime Instance => */ "2018-12-20 14:30:00",
  "technicians": [],
  "title": "Second événement",
  "total_discount": /* Decimal Instance => */ "0",
  "total_discountable": /* Decimal Instance => */ "89.25",
  "total_replacement": /* Decimal Instance => */ "58899.8",
  "total_taxes": /* Decimal Instance => */ "332.85",
  "total_with_taxes": /* Decimal Instance => */ "1997.1",
  "total_without_discount": /* Decimal Instance => */ "1664.25",
  "total_without_taxes": /* Decimal Instance => */ "1664.25",
  "updated_at": null,
  "vat_rate": /* Decimal Instance => */ "20",
}
`;

exports[`Bookings Api updateMaterials() parse the returned data correctly 3`] = `
{
  "author": {
    "email": "tester@robertmanager.net",
    "first_name": "Jean",
    "full_name": "Jean Fountain",
    "group": "admin",
    "id": 1,
    "last_name": "Fountain",
    "phone": null,
    "pseudo": "test1",
  },
  "beneficiaries": [],
  "color": null,
  "created_at": /* DateTime Instance => */ "2018-12-14 12:20:00",
  "currency": "EUR",
  "departure_inventory_author": {
    "email": "tester@robertmanager.net",
    "first_name": "Jean",
    "full_name": "Jean Fountain",
    "group": "admin",
    "id": 1,
    "last_name": "Fountain",
    "phone": null,
    "pseudo": "test1",
  },
  "departure_inventory_datetime": /* DateTime Instance => */ "2018-12-15 08:17:00",
  "description": null,
  "entity": "event",
  "has_missing_materials": null,
  "has_not_returned_materials": null,
  "id": 3,
  "is_archived": true,
  "is_billable": false,
  "is_confirmed": false,
  "is_departure_inventory_done": true,
  "is_return_inventory_done": true,
  "is_return_inventory_started": true,
  "location": "Brousse",
  "materials": [
    {
      "attributes": [
        {
          "id": 1,
          "is_totalisable": true,
          "name": "Poids",
          "type": "float",
          "unit": "kg",
          "value": 0.85,
        },
        {
          "id": 3,
          "is_totalisable": true,
          "name": "Puissance",
          "type": "integer",
          "unit": "W",
          "value": 150,
        },
      ],
      "category_id": 2,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
      "description": "Projecteur PAR64 à LED, avec son set de gélatines",
      "id": 3,
      "is_discountable": true,
      "is_hidden_on_bill": false,
      "is_reservable": true,
      "name": "PAR64 LED",
      "note": "Soyez délicats avec ces projos !",
      "out_of_order_quantity": 4,
      "park_id": 1,
      "picture": null,
      "pivot": {
        "departure_comment": null,
        "quantity": 10,
        "quantity_departed": 10,
        "quantity_returned": 0,
        "quantity_returned_broken": 0,
      },
      "reference": "PAR64LED",
      "rental_price": /* Decimal Instance => */ "3.5",
      "replacement_price": /* Decimal Instance => */ "89",
      "stock_quantity": 34,
      "sub_category_id": 3,
      "tags": [
        {
          "id": 1,
          "name": "Premium",
        },
      ],
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
    },
    {
      "attributes": [
        {
          "id": 1,
          "is_totalisable": true,
          "name": "Poids",
          "type": "float",
          "unit": "kg",
          "value": 2.2,
        },
        {
          "id": 3,
          "is_totalisable": true,
          "name": "Puissance",
          "type": "integer",
          "unit": "W",
          "value": 35,
        },
      ],
      "category_id": 1,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:01:00",
      "description": "Système de diffusion numérique",
      "id": 2,
      "is_discountable": true,
      "is_hidden_on_bill": false,
      "is_reservable": false,
      "name": "Processeur DBX PA2",
      "note": null,
      "out_of_order_quantity": 0,
      "park_id": 1,
      "picture": null,
      "pivot": {
        "departure_comment": null,
        "quantity": 1,
        "quantity_departed": 1,
        "quantity_returned": 0,
        "quantity_returned_broken": 0,
      },
      "reference": "DBXPA2",
      "rental_price": /* Decimal Instance => */ "25.5",
      "replacement_price": /* Decimal Instance => */ "349.9",
      "stock_quantity": 2,
      "sub_category_id": 2,
      "tags": [
        {
          "id": 1,
          "name": "Premium",
        },
      ],
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:02:00",
    },
    {
      "attributes": [],
      "category_id": 1,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:14:00",
      "description": "Câble audio XLR 10 mètres, mâle-femelle",
      "id": 5,
      "is_discountable": true,
      "is_hidden_on_bill": true,
      "is_reservable": true,
      "name": "Câble XLR 10m",
      "note": null,
      "out_of_order_quantity": 8,
      "park_id": 1,
      "picture": null,
      "pivot": {
        "departure_comment": null,
        "quantity": 12,
        "quantity_departed": 12,
        "quantity_returned": 0,
        "quantity_returned_broken": 0,
      },
      "reference": "XLR10",
      "rental_price": /* Decimal Instance => */ "0.5",
      "replacement_price": /* Decimal Instance => */ "9.5",
      "stock_quantity": 40,
      "sub_category_id": null,
      "tags": [],
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:14:00",
    },
  ],
  "mobilization_period": /* Period Instance => */ {
    "end": "2018-12-16 15:45:00",
    "isFullDays": false,
    "start": "2018-12-15 08:30:00",
  },
  "note": null,
  "operation_period": /* Period Instance => */ {
    "end": "2018-12-17 00:00:00",
    "isFullDays": false,
    "start": "2018-12-15 09:00:00",
  },
  "reference": null,
  "return_inventory_author": {
    "email": "tester@robertmanager.net",
    "first_name": "Jean",
    "full_name": "Jean Fountain",
    "group": "admin",
    "id": 1,
    "last_name": "Fountain",
    "phone": null,
    "pseudo": "test1",
  },
  "return_inventory_datetime": /* DateTime Instance => */ "2018-12-16 15:42:00",
  "technicians": [],
  "title": "Avant-premier événement",
  "total_replacement": /* Decimal Instance => */ "1353.9",
  "updated_at": /* DateTime Instance => */ "2018-12-14 12:30:00",
}
`;

exports[`Bookings Api updateMaterials() parse the returned data correctly 4`] = `
{
  "author": {
    "email": "tester@robertmanager.net",
    "first_name": "Jean",
    "full_name": "Jean Fountain",
    "group": "admin",
    "id": 1,
    "last_name": "Fountain",
    "phone": null,
    "pseudo": "test1",
  },
  "beneficiaries": [],
  "color": "#ef5b5b",
  "created_at": /* DateTime Instance => */ "2019-01-01 20:12:00",
  "currency": "EUR",
  "departure_inventory_author": null,
  "departure_inventory_datetime": null,
  "description": null,
  "entity": "event",
  "has_missing_materials": true,
  "has_not_returned_materials": null,
  "id": 4,
  "is_archived": false,
  "is_billable": false,
  "is_confirmed": false,
  "is_departure_inventory_done": false,
  "is_return_inventory_done": false,
  "is_return_inventory_started": true,
  "location": "Moon",
  "materials": [
    {
      "attributes": [
        {
          "id": 1,
          "is_totalisable": true,
          "name": "Poids",
          "type": "float",
          "unit": "kg",
          "value": 36.5,
        },
        {
          "id": 2,
          "max_length": null,
          "name": "Couleur",
          "type": "string",
          "value": "Grise",
        },
        {
          "id": 3,
          "is_totalisable": true,
          "name": "Puissance",
          "type": "integer",
          "unit": "W",
          "value": 850,
        },
      ],
      "category_id": 1,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
      "description": "Console numérique 64 entrées / 8 sorties + Master + Sub",
      "id": 1,
      "is_discountable": false,
      "is_hidden_on_bill": false,
      "is_reservable": true,
      "name": "Console Yamaha CL3",
      "note": null,
      "out_of_order_quantity": 1,
      "park_id": 1,
      "picture": "http://loxya.test/materials/1/picture",
      "pivot": {
        "departure_comment": null,
        "quantity": 1,
        "quantity_departed": null,
        "quantity_returned": 0,
        "quantity_returned_broken": 0,
      },
      "reference": "CL3",
      "rental_price": /* Decimal Instance => */ "300",
      "replacement_price": /* Decimal Instance => */ "19400",
      "stock_quantity": 5,
      "sub_category_id": 1,
      "tags": [
        {
          "id": 1,
          "name": "Premium",
        },
      ],
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
    },
    {
      "attributes": [
        {
          "id": 5,
          "name": "Date d'achat",
          "type": "date",
          "value": /* Day Instance => */ "2021-01-28",
        },
      ],
      "category_id": 1,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:15:00",
      "description": "Mélangeur numérique 18 canaux",
      "id": 6,
      "is_discountable": false,
      "is_hidden_on_bill": false,
      "is_reservable": true,
      "name": "Behringer X Air XR18",
      "note": null,
      "out_of_order_quantity": 1,
      "park_id": 1,
      "picture": null,
      "pivot": {
        "departure_comment": null,
        "quantity": 2,
        "quantity_departed": 1,
        "quantity_returned": 1,
        "quantity_returned_broken": 0,
      },
      "reference": "XR18",
      "rental_price": /* Decimal Instance => */ "49.99",
      "replacement_price": /* Decimal Instance => */ "419",
      "stock_quantity": 3,
      "sub_category_id": 1,
      "tags": [],
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:15:00",
    },
    {
      "attributes": [],
      "category_id": 3,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:16:00",
      "description": "Volume utile: 9.3 m3",
      "id": 7,
      "is_discountable": false,
      "is_hidden_on_bill": false,
      "is_reservable": true,
      "name": "Volkswagen Transporter",
      "note": null,
      "out_of_order_quantity": 0,
      "park_id": 1,
      "picture": null,
      "pivot": {
        "departure_comment": null,
        "quantity": 3,
        "quantity_departed": null,
        "quantity_returned": 0,
        "quantity_returned_broken": 0,
      },
      "reference": "Transporter",
      "rental_price": /* Decimal Instance => */ "300",
      "replacement_price": /* Decimal Instance => */ "32000",
      "stock_quantity": 2,
      "sub_category_id": null,
      "tags": [],
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:16:00",
    },
  ],
  "mobilization_period": /* Period Instance => */ {
    "end": "2019-04-11 00:00:00",
    "isFullDays": false,
    "start": "2019-03-01 00:00:00",
  },
  "note": "Penser à contacter Cap Canaveral fin janvier pour booker le pas de tir.",
  "operation_period": /* Period Instance => */ {
    "end": "2019-04-10",
    "isFullDays": true,
    "start": "2019-03-01",
  },
  "reference": null,
  "return_inventory_author": null,
  "return_inventory_datetime": null,
  "technicians": [],
  "title": "Concert X",
  "total_replacement": /* Decimal Instance => */ "116238",
  "updated_at": null,
}
`;

exports[`Bookings Api updateMaterials() parse the returned data correctly 5`] = `
{
  "author": {
    "email": "tester@robertmanager.net",
    "first_name": "Jean",
    "full_name": "Jean Fountain",
    "group": "admin",
    "id": 1,
    "last_name": "Fountain",
    "phone": null,
    "pseudo": "test1",
  },
  "beneficiaries": [
    {
      "company": {
        "country": {
          "code": "FR",
          "id": 1,
          "name": "France",
        },
        "country_id": 1,
        "full_address": "1, company st.
1234 Megacity",
        "id": 1,
        "legal_name": "Testing, Inc",
        "locality": "Megacity",
        "note": "Just for tests",
        "phone": "+4123456789",
        "postal_code": "1234",
        "street": "1, company st.",
      },
      "company_id": 1,
      "country": {
        "code": "FR",
        "id": 1,
        "name": "France",
      },
      "country_id": 1,
      "email": "tester@robertmanager.net",
      "first_name": "Jean",
      "full_address": "1, somewhere av.
1234 Megacity",
      "full_name": "Jean Fountain",
      "id": 1,
      "last_name": "Fountain",
      "locality": "Megacity",
      "note": null,
      "phone": null,
      "postal_code": "1234",
      "reference": "0001",
      "street": "1, somewhere av.",
      "user_id": 1,
    },
  ],
  "color": null,
  "created_at": /* DateTime Instance => */ "2019-12-25 14:59:40",
  "currency": "EUR",
  "departure_inventory_author": null,
  "departure_inventory_datetime": null,
  "description": null,
  "entity": "event",
  "has_missing_materials": true,
  "has_not_returned_materials": null,
  "id": 5,
  "is_archived": false,
  "is_billable": false,
  "is_confirmed": false,
  "is_departure_inventory_done": false,
  "is_return_inventory_done": false,
  "is_return_inventory_started": false,
  "location": "Saint-Jean-la-Forêt",
  "materials": [
    {
      "attributes": [],
      "category_id": 4,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:18:00",
      "description": "Forêt mystique, typique des récits fantastiques.",
      "id": 8,
      "is_discountable": true,
      "is_hidden_on_bill": false,
      "is_reservable": true,
      "name": "Décor Thème Forêt",
      "note": null,
      "out_of_order_quantity": 0,
      "park_id": 1,
      "picture": null,
      "pivot": {
        "departure_comment": null,
        "quantity": 2,
        "quantity_departed": 1,
        "quantity_returned": null,
        "quantity_returned_broken": null,
      },
      "reference": "Decor-Forest",
      "rental_price": /* Decimal Instance => */ "1500",
      "replacement_price": /* Decimal Instance => */ "8500",
      "stock_quantity": 2,
      "sub_category_id": null,
      "tags": [],
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:18:00",
    },
  ],
  "mobilization_period": /* Period Instance => */ {
    "end": "2020-01-02 00:00:00",
    "isFullDays": false,
    "start": "2020-01-01 00:00:00",
  },
  "note": null,
  "operation_period": /* Period Instance => */ {
    "end": "2020-01-01",
    "isFullDays": true,
    "start": "2020-01-01",
  },
  "reference": null,
  "return_inventory_author": null,
  "return_inventory_datetime": null,
  "technicians": [],
  "title": "Kermesse de l'école des trois cailloux",
  "total_replacement": /* Decimal Instance => */ "17000",
  "updated_at": null,
}
`;

exports[`Bookings Api updateMaterials() parse the returned data correctly 6`] = `
{
  "author": {
    "email": "tester@robertmanager.net",
    "first_name": "Jean",
    "full_name": "Jean Fountain",
    "group": "admin",
    "id": 1,
    "last_name": "Fountain",
    "phone": null,
    "pseudo": "test1",
  },
  "beneficiaries": [],
  "color": "#ef5b5b",
  "created_at": /* DateTime Instance => */ "2019-02-01 12:00:00",
  "currency": "EUR",
  "departure_inventory_author": null,
  "departure_inventory_datetime": null,
  "description": null,
  "entity": "event",
  "has_missing_materials": false,
  "has_not_returned_materials": null,
  "id": 6,
  "is_archived": false,
  "is_billable": false,
  "is_confirmed": false,
  "is_departure_inventory_done": false,
  "is_return_inventory_done": false,
  "is_return_inventory_started": false,
  "location": "La Clusaz",
  "materials": [],
  "mobilization_period": /* Period Instance => */ {
    "end": "2019-04-02 00:00:00",
    "isFullDays": false,
    "start": "2019-03-15 00:00:00",
  },
  "note": null,
  "operation_period": /* Period Instance => */ {
    "end": "2019-04-01",
    "isFullDays": true,
    "start": "2019-03-15",
  },
  "reference": null,
  "return_inventory_author": null,
  "return_inventory_datetime": null,
  "technicians": [],
  "title": "Un événement sans inspiration",
  "total_replacement": /* Decimal Instance => */ "0",
  "updated_at": /* DateTime Instance => */ "2019-02-01 12:05:00",
}
`;

exports[`Bookings Api updateMaterials() parse the returned data correctly 7`] = `
{
  "author": {
    "email": "tester@robertmanager.net",
    "first_name": "Jean",
    "full_name": "Jean Fountain",
    "group": "admin",
    "id": 1,
    "last_name": "Fountain",
    "phone": null,
    "pseudo": "test1",
  },
  "beneficiaries": [],
  "color": null,
  "created_at": /* DateTime Instance => */ "2022-05-29 18:00:00",
  "currency": "EUR",
  "daily_total": /* Decimal Instance => */ "1031.88",
  "degressive_rate": /* Decimal Instance => */ "3.25",
  "departure_inventory_author": null,
  "departure_inventory_datetime": null,
  "description": null,
  "discount_rate": /* Decimal Instance => */ "0",
  "entity": "event",
  "estimates": [],
  "has_missing_materials": false,
  "has_not_returned_materials": null,
  "id": 7,
  "invoices": [],
  "is_archived": false,
  "is_billable": true,
  "is_confirmed": true,
  "is_departure_inventory_done": false,
  "is_return_inventory_done": false,
  "is_return_inventory_started": true,
  "location": "Machin-le-chateau",
  "materials": [
    {
      "attributes": [
        {
          "id": 1,
          "is_totalisable": true,
          "name": "Poids",
          "type": "float",
          "unit": "kg",
          "value": 36.5,
        },
        {
          "id": 2,
          "max_length": null,
          "name": "Couleur",
          "type": "string",
          "value": "Grise",
        },
        {
          "id": 3,
          "is_totalisable": true,
          "name": "Puissance",
          "type": "integer",
          "unit": "W",
          "value": 850,
        },
      ],
      "category_id": 1,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
      "description": "Console numérique 64 entrées / 8 sorties + Master + Sub",
      "id": 1,
      "is_discountable": false,
      "is_hidden_on_bill": false,
      "is_reservable": true,
      "name": "Console Yamaha CL3",
      "note": null,
      "out_of_order_quantity": 1,
      "park_id": 1,
      "picture": "http://loxya.test/materials/1/picture",
      "pivot": {
        "departure_comment": null,
        "quantity": 2,
        "quantity_departed": null,
        "quantity_returned": 1,
        "quantity_returned_broken": 0,
      },
      "reference": "CL3",
      "rental_price": /* Decimal Instance => */ "300",
      "replacement_price": /* Decimal Instance => */ "19400",
      "stock_quantity": 5,
      "sub_category_id": 1,
      "tags": [
        {
          "id": 1,
          "name": "Premium",
        },
      ],
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:00:00",
    },
    {
      "attributes": [
        {
          "id": 5,
          "name": "Date d'achat",
          "type": "date",
          "value": /* Day Instance => */ "2021-01-28",
        },
      ],
      "category_id": 1,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:15:00",
      "description": "Mélangeur numérique 18 canaux",
      "id": 6,
      "is_discountable": false,
      "is_hidden_on_bill": false,
      "is_reservable": true,
      "name": "Behringer X Air XR18",
      "note": null,
      "out_of_order_quantity": 1,
      "park_id": 1,
      "picture": null,
      "pivot": {
        "departure_comment": null,
        "quantity": 2,
        "quantity_departed": null,
        "quantity_returned": 2,
        "quantity_returned_broken": 1,
      },
      "reference": "XR18",
      "rental_price": /* Decimal Instance => */ "49.99",
      "replacement_price": /* Decimal Instance => */ "419",
      "stock_quantity": 3,
      "sub_category_id": 1,
      "tags": [],
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:15:00",
    },
    {
      "attributes": [],
      "category_id": 3,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:16:00",
      "description": "Volume utile: 9.3 m3",
      "id": 7,
      "is_discountable": false,
      "is_hidden_on_bill": false,
      "is_reservable": true,
      "name": "Volkswagen Transporter",
      "note": null,
      "out_of_order_quantity": 0,
      "park_id": 1,
      "picture": null,
      "pivot": {
        "departure_comment": null,
        "quantity": 1,
        "quantity_departed": null,
        "quantity_returned": null,
        "quantity_returned_broken": null,
      },
      "reference": "Transporter",
      "rental_price": /* Decimal Instance => */ "300",
      "replacement_price": /* Decimal Instance => */ "32000",
      "stock_quantity": 2,
      "sub_category_id": null,
      "tags": [],
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:16:00",
    },
    {
      "attributes": [
        {
          "id": 1,
          "is_totalisable": true,
          "name": "Poids",
          "type": "float",
          "unit": "kg",
          "value": 3.15,
        },
        {
          "id": 3,
          "is_totalisable": true,
          "name": "Puissance",
          "type": "integer",
          "unit": "W",
          "value": 60,
        },
        {
          "id": 4,
          "name": "Conforme",
          "type": "boolean",
          "value": true,
        },
      ],
      "category_id": 2,
      "created_at": /* DateTime Instance => */ "2021-02-12 23:03:00",
      "description": "Console DMX (jeu d'orgue) Showtec 6 canaux",
      "id": 4,
      "is_discountable": true,
      "is_hidden_on_bill": false,
      "is_reservable": true,
      "name": "Showtec SDS-6",
      "note": null,
      "out_of_order_quantity": 0,
      "park_id": 1,
      "picture": null,
      "pivot": {
        "departure_comment": null,
        "quantity": 2,
        "quantity_departed": null,
        "quantity_returned": 1,
        "quantity_returned_broken": 1,
      },
      "reference": "SDS-6-01",
      "rental_price": /* Decimal Instance => */ "15.95",
      "replacement_price": /* Decimal Instance => */ "59",
      "stock_quantity": 2,
      "sub_category_id": 4,
      "tags": [],
      "updated_at": /* DateTime Instance => */ "2021-02-12 23:03:00",
    },
  ],
  "mobilization_period": /* Period Instance => */ {
    "end": "2023-05-29 00:00:00",
    "isFullDays": false,
    "start": "2023-05-25 00:00:00",
  },
  "note": null,
  "operation_period": /* Period Instance => */ {
    "end": "2023-05-28",
    "isFullDays": true,
    "start": "2023-05-25",
  },
  "reference": null,
  "return_inventory_author": null,
  "return_inventory_datetime": null,
  "technicians": [
    {
      "event_id": 7,
      "id": 3,
      "period": /* Period Instance => */ {
        "end": "2023-05-29 00:00:00",
        "isFullDays": false,
        "start": "2023-05-25 00:00:00",
      },
      "position": "Ingénieur du son",
      "technician": {
        "country": {
          "code": "CH",
          "id": 2,
          "name": "Suisse",
        },
        "country_id": 2,
        "email": "client@technicien.com",
        "first_name": "Jean",
        "full_address": null,
        "full_name": "Jean Technicien",
        "id": 2,
        "last_name": "Technicien",
        "locality": null,
        "nickname": null,
        "note": null,
        "phone": "+33645698520",
        "postal_code": null,
        "street": null,
        "user_id": null,
      },
      "technician_id": 2,
    },
  ],
  "title": "Médiévales de Machin-le-chateau 2023",
  "total_discount": /* Decimal Instance => */ "0",
  "total_discountable": /* Decimal Instance => */ "103.68",
  "total_replacement": /* Decimal Instance => */ "71756",
  "total_taxes": /* Decimal Instance => */ "670.72",
  "total_with_taxes": /* Decimal Instance => */ "4024.33",
  "total_without_discount": /* Decimal Instance => */ "3353.61",
  "total_without_taxes": /* Decimal Instance => */ "3353.61",
  "updated_at": /* DateTime Instance => */ "2022-05-29 18:05:00",
  "vat_rate": /* Decimal Instance => */ "20",
}
`;
